--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# database
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url= jdbc:mysql://database-ddrd.crqzg9d1kmc5.ap-northeast-2.rds.amazonaws.com:3306/ddrd_database?characterEncoding=utf8
+spring.datasource.username= admin
+spring.datasource.password= 1q2w3e4r!
+
+# mybatis
+mybatis.config=mybatis-config.xml
+mybatis.type-aliases-package= com.ddrdaccountingmanagement.domain
+mybatis.mapper-locations= mapper/**/*.xml
 
